src/test/ui/borrowck/borrowck-move-out-of-vec-tail.nll.stderr
error[E0508]: cannot move out of type `[Foo]`, a non-copy slice
  --> $DIR/borrowck-move-out-of-vec-tail.rs:29:19
   |
LL |             match tail {
   |                   ^^^^ cannot move out of here
help: to prevent move, use ref or ref mut
   |
LL |                 &[Foo { string: ref a },
   |                                 ^^^^^
help: to prevent move, use ref or ref mut
   |
LL |                   Foo { string: ref b }] => {
   |                                 ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0508`.
